2000-12-11  Jeffrey Stedfast  <fejj@helixcode.com>

	* test-pgp.c (test_encrypt): Updated to reflect argument changes
	to pgp_encrypt.

	* pgp-mime.c (pgp_mime_part_encrypt): And here too.

	* pgp-utils.c (pgp_encrypt): Always initialize the passwd_fds even
	if we won't use them (ie if 'sign' is FALSE). Now also takes a
	userid argument for cases when 'sign' is set to TRUE (so we may
	specify which userid to use when signing).
	(crypto_exec_with_passwd): Only strlen (passphrase) if passphrase
	is non-NULL, otherwise just pretend it's length is 0.

2000-12-10  Jeffrey Stedfast  <fejj@helixcode.com>

	* test-pgp.c: Added test program for pgp-utils.

	* Makefile.am: Added gmime-exception.c, pgp-utils.c, and
	pgp-mime.c to the build.

	* pgp-utils.[c,h]: Fixes to make it build.

	* pgp-mime.[c,h]: Fixes to make it build.

2000-12-10  Jeffrey Stedfast  <fejj@helixcode.com>
	Beginning of the GMIME_PGP_MIME branch.

	* md5-utils.[c,h]: Added.

	* gmime-exception*: An exception implementation stolen from Camel.

	* pgp-utils.[c,h]: PGP interface code stolen from Spruce and
	Evolution and modified to better handle binary data streams rather
	than only text streams. Also made it so that the program using
	GMime can specify the PGP program at run-time thus making it so
	that there are no build-time dependencies on a PGP program.

	* pgp-mime.[c,h]: A PGP/MIME (rfc2015) implementation using
	pgp-utils and gmime-exception. It goes untested so far but I think
	it should work, though I'd hesitate to say it's a perfect
	implementation.

2000-12-09  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_set_boundary): Generate a random
	boundary if passed boundary is NULL.

2000-12-07  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-message.c (multipart_get_body): Traverses a MIME Part and
	'always' extracts the body assuming it exists. Extracts the
	preffered text type if it exists, otherwise returns the type less
	preferred.